dissect_nt_v2_ace: doesn't support ace type > 8
This issue was migrated from bug 6004 in our old bug tracker.
Original bug information:
Reporter: Gregor Beck
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: Other
Version: Git
Attachments:
ace_type_mandatory_label.pcap.gz: capture of setting the integrity level on a file with smb2
0001-dissect_nt_v2_ace-support-ACE_TYPE_SYSTEM_MANDATORY_.patch: patch for trunk
0002-dissect_nt_v2_ace-rudimentarily-support-ACE_TYPE_XXX.patch: patch for trunk