From Gregor Beck via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6004 dissect_nt_v2_ace: doesn't support ace type > 8

svn path=/trunk/; revision=37692